--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-router": "^6.8.1",
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.1.1",
     "react-use": "^17.4.0",
     "redux": "^4.2.1",
     "styled-components": "^5.3.6",
