--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-use": "^17.4.0",
     "redux": "^4.2.1",
     "styled-components": "^5.3.6",
+    "tailwindcss-scoped-groups": "^2.0.0",
     "typewriter-effect": "^2.19.0",
     "web-vitals": "^2.1.4"
   },
