--- a/package.json
+++ b/package.json
@@ -1,54 +1,55 @@
 {
-  "name": "frontend",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "aos": "^3.0.0-beta.6",
-    "axios": "^1.3.4",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-icons": "^4.7.1",
-    "react-owl-carousel": "^2.3.3",
-    "react-redux": "^8.0.5",
-    "react-router": "^6.8.1",
-    "react-router-dom": "^6.8.1",
-    "react-scripts": "5.0.1",
-    "react-toastify": "^9.1.1",
-    "react-use": "^17.4.0",
-    "redux": "^4.2.1",
-    "styled-components": "^5.3.6",
-    "tailwindcss-scoped-groups": "^2.0.0",
-    "typewriter-effect": "^2.19.0",
-    "web-vitals": "^2.1.4"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "devDependencies": {
-    "tailwindcss": "^3.2.7"
-  }
+   "name": "frontend",
+   "version": "0.1.0",
+   "private": true,
+   "dependencies": {
+      "@testing-library/jest-dom": "^5.16.5",
+      "@testing-library/react": "^13.4.0",
+      "@testing-library/user-event": "^13.5.0",
+      "aos": "^3.0.0-beta.6",
+      "axios": "^1.3.4",
+      "react": "^18.2.0",
+      "react-dom": "^18.2.0",
+      "react-icons": "^4.7.1",
+      "react-owl-carousel": "^2.3.3",
+      "react-redux": "^8.0.5",
+      "react-router": "^6.8.1",
+      "react-router-dom": "^6.8.1",
+      "react-scripts": "5.0.1",
+      "react-toastify": "^9.1.1",
+      "react-use": "^17.4.0",
+      "redux": "^4.2.1",
+      "styled-components": "^5.3.6",
+      "tailwindcss-scoped-groups": "^2.0.0",
+      "typewriter-effect": "^2.19.0",
+      "web-vitals": "^2.1.4"
+   },
+   "scripts": {
+      "start": "react-scripts start",
+      "build": "react-scripts build",
+      "test": "react-scripts test",
+      "eject": "react-scripts eject",
+      "push": "git add . && git commit -m \"Background changed\" && git push"
+   },
+   "eslintConfig": {
+      "extends": [
+         "react-app",
+         "react-app/jest"
+      ]
+   },
+   "browserslist": {
+      "production": [
+         ">0.2%",
+         "not dead",
+         "not op_mini all"
+      ],
+      "development": [
+         "last 1 chrome version",
+         "last 1 firefox version",
+         "last 1 safari version"
+      ]
+   },
+   "devDependencies": {
+      "tailwindcss": "^3.2.7"
+   }
 }
